--- a/assets/app.css
+++ b/assets/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 /*! Flickity v2.3.0
 https://flickity.metafizzy.co
 ---------------------------------------------- */
@@ -1584,29 +1586,18 @@ ul {
 }
 
 @font-face {
-  font-family: 'Bau';
-  src: url('../font/3213A1_0_0.eot');
-  src:
-    url('../font/3213A1_0_0.eot?#iefix') format('embedded-opentype'),
-    url('../font/3213A1_0_0.woff2') format('woff2'),
-    url('../font/3213A1_0_0.woff') format('woff'),
-    url('../font/3213A1_0_0.ttf') format('truetype');
+  font-family: 'Quicksand', sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 }
 
-@font-face{
-  font-family:"Bau";
-  src:url("../font/8bee62e6-3e09-48c9-8a78-a9356add2d72.eot?#iefix");
-  src:url("../font/8bee62e6-3e09-48c9-8a78-a9356add2d72.eot?#iefix") format("eot"),url("../font/db90bd28-fa7c-4a61-9fd7-565a260aa4b3.woff2") format("woff2"),url("../font/8659315a-a0df-4f6a-bd66-8750bbe7fbd1.woff") format("woff"),url("../font/d2574dce-e649-47cc-af7d-018a9482ca23.ttf") format("truetype");
-  font-weight: 500;
-}
 
 body {
-  font-family: 'Bau', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   line-height: 1.375;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #fff;
+  color: #000;
   letter-spacing: 1px;
 }
 
@@ -2065,7 +2056,7 @@ body.is-home:not(.is--scrolled) .is--video:not(.is--hovering) .rma-logo:not(.is-
 }
 
 .site-footer {
-  background-color: #bbafa9;
+  background-color: #000;
   color: #fff;
   padding: 0 24px;
 }
@@ -2098,7 +2089,7 @@ body.is-home:not(.is--scrolled) .is--video:not(.is--hovering) .rma-logo:not(.is-
   text-align: center;
   list-style: none;
   display: none;
-  background: #bbafa9;
+  background: #000;
 }
 
 .social-icons.is--active {
@@ -3269,7 +3260,7 @@ input:focus {
   }
 
 body { 
-  background-color: #bbafa9;
+  background-color: #fff994;
   -webkit-transition: background-color 350ms;
   -o-transition: background-color 350ms;
   transition: background-color 350ms;
@@ -4076,7 +4067,7 @@ body {
   z-index: 20;
   width: 100%;
   height: 100vh;
-  background: #bbafa9;
+  background: #000;
 }
 
 .video-landing__el {
@@ -4749,7 +4740,7 @@ body {
     left: 0;
     z-index: 50;
     width: 100%;
-    background-color: #bbafa9;
+    /* background-color: #bbafa9; */
     display: none;
   }
 
@@ -5120,11 +5111,11 @@ body {
 
 .site-header {
     padding: 0 30px;
-    background-color: rgba(187, 175, 169, 0.75)
+    background-color: rgba(255, 242, 4, 0.1)
 }
 
     body.body--invert .site-header {
-      background-color: rgba(242, 243, 239, 0.75);
+      background-color: rgba(255, 242, 4, 0.1);
     }
 
     .site-header .container {
